<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutCalculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/btnFGTS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fgts" />

        <Button
            android:id="@+id/btnSalarioLiquido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salarioLiquido" />

        <Button
            android:id="@+id/btnHoraExtra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horaExtra" />

        <Button
            android:id="@+id/btnSalarioHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salarioHora" />
    </LinearLayout>

</ScrollView>